# collatz

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  DevDockerfile  Dockerfile  LICENSE  Makefile  README.md  concept_notes.md  docker-compose-analysis.yml  docker-compose-collatz.yml  docker-compose.yml  history.csv
.devcontainer/: devcontainer.json
analysis/: Dockerfile
analysis/notebooks/: 01_overview.ipynb
src/: db.rs  main.rs
