[package]
name = "collatz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4.3", features = ["rand"] }
num-integer = "0.1.4"
rand = "0.8"
num-traits = "0.2"
polars = "0.27"

[profile.release]
lto = true
codegen-units = 1
